# enterprise-policy-rag

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: streamlit_app.py
eval/: questions.jsonl  run_eval.py
scripts/: create_sample_policies.py
src/rag_app/: __init__.py  chunking.py  config.py  ingest.py  llm.py  loaders.py  pipeline.py  retrieval.py  schemas.py  vector_store.py
tests/: test_chunking.py
